# codeforces_solutions

./: .gitignore
contest/1037/d/: d  d.cpp
contest/1063/a/: a  a.cpp
contest/1139/c/: c  c.cpp
contest/118/d/: d  d.cpp
contest/1234/d/: d  d.cpp  d1.cpp
contest/1236/b/: CMakeLists.txt  b  b.cpp
contest/126/b/: b  b.cpp
contest/1311/d/: d  d.cpp
contest/1355/b/: CMakeLists.txt  b.cpp
contest/1355/c/: c  c.cpp  gen  gen.cpp  int  naim  naim.cpp  s.sh
contest/1359/d/: d  d.cpp
contest/1366/d/: d  d.cpp
contest/1370/d/: d  d.cpp
contest/1381/a2/: CMakeLists.txt  a2  a2.cpp
contest/1398/c/: c.cpp  competitive_template.sh
contest/143/a/: a  a.cpp
contest/1438/c/: c  c.cpp
contest/1538/d/: d  d.cpp
contest/1554/b/: b  b.cpp
contest/1555/c/: c.cpp
contest/1560/d/: d.cpp
contest/1575/j/: CMakeLists.txt  in3.txt  j  j.cpp
contest/1579/a/: a  a.cpp
contest/1579/b/: b.cpp
contest/1579/d/: d  d.cpp
contest/1579/e1/: CMakeLists.txt  e1  e1.cpp
contest/1579/e2/: CMakeLists.txt  e2.cpp
contest/1585/c/: c.cpp
contest/1589/a/: a  a.cpp
contest/1589/b/: b  b.cpp
contest/1589/c/: c  c.cpp
contest/1592/c/: c  c.cpp
contest/1593/e/: e  e.cpp
contest/1601/a/: a.cpp
contest/161/d/: CMakeLists.txt  brute  d  d.cpp  smart_tree_random  smart_tree_random.cpp  solution  solution.cpp
epic/a/: CMakeLists.txt  a.cpp
epic/b/: b.cpp
epic/c/: CMakeLists.txt  c.cpp
epic/d/: CMakeLists.txt  d.cpp
epic/e/: e  e.cpp
epic/f/: f  f.cpp
epic/g/: g.cpp
epic/h/: CMakeLists.txt  h.cpp
epic/i/: CMakeLists.txt  i.cpp
(+208 files in other folders)
